influxdb/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: docker.io/influxdb:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
      - name: var-lib-influxdb
        persistentVolumeClaim:
          claimName: influxdb-claim
