influxdb/influxdb-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-np
spec:
  type: NodePort
  selector:
    app: influxdb
  ports:
  - port: 8086
    targetPort: 8086
    nodePort: 30001
